# my-android-app-boilerplate

./: .gitignore  README.md  build.gradle  dependencies.gradle  settings.gradle
algorithms-lib/: build.gradle  proguard-rules.pro  runCompileProto.sh
algorithms-lib/src/main/jni/cpp/: .gitignore  CMakeLists.txt  README.md  runClean.sh  runCompileTests.sh  runTests.sh
algorithms-lib/src/main/jni/cpp/algorithm/designer/: DesignerSampler.cpp  README.md
algorithms-lib/src/main/jni/cpp/algorithm/one_big/: BigCenterGridSampler.cpp  BigCenterGridSampler.hpp  BigTopGridSampler.cpp  EqualGridSampler.hpp  README.md  common.hpp
algorithms-lib/src/main/jni/cpp/algorithm/pic_wall_6694305/: PicWallSampler.cpp
algorithms-lib/src/main/jni/cpp/doc/: instruction.md
algorithms-lib/src/main/jni/cpp/include/: Grid.hpp  RectF.hpp
algorithms-lib/src/main/jni/cpp/protocol/: ProtoGridList.proto  ProtoRectF.proto  ProtoUtil.hpp
algorithms-lib/src/main/jni/cpp/tests/: GridsGeneratorTests.cpp  GridsOptimizerTests.cpp  ProtobufTests.cpp
app/: build.gradle  fabric.properties  google-services.json  proguard-rules.pro
app/libs/: lib-component-release.aar  lib-photo-collage-release.aar  lib-widget-release.aar
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: crashlytics-build.properties
app/src/main/assets/avatars/: info.json
app/src/main/res/anim/: slide_down_exit.xml  slide_up_enter.xml
app/src/main/res/drawable/: bg_border_rect.xml  bg_circle_red.xml  ic_back.xml  ic_close.xml  ic_close_1.xml  ic_close_2.xml  ic_down_arrow.xml  ic_download.xml  ic_fast_forward_black_24px.xml  ic_fast_rewind_black_24px.xml  ic_list_black_24px.xml  ic_notification.xml  ic_search.xml  ic_settings.xml  img_debug.xml  img_gallery.xml  img_pen.xml  sel_ic_test.xml
app/src/main/res/layout/: activity_collage_editor.xml  activity_download_manager_sample.xml  activity_drawer_sample.xml  activity_file_provider_sample.xml  activity_iap_sample.xml  activity_login.xml  activity_my_questions.xml  activity_my_requests.xml  activity_new_question.xml  activity_new_requests.xml  activity_notification_result_sample_1.xml  activity_notification_result_sample_2.xml  activity_notification_sample.xml  activity_requests.xml  activity_settings.xml  activity_splash_screen.xml  activity_start.xml  activity_start_page.xml  activity_view_of_camera_sample.xml  activity_view_of_elastic_drag_dismiss_sample.xml  drawer_menu_item.xml  drop_down_menu.xml  fragment_coordinator_layout_sample.xml  fragment_drawer_of_custom_viewgroup_sample.xml  fragment_drawer_sample.xml  fragment_image_previewer.xml  fragment_up_down_drawer.xml  fragment_view_of_coordinator_layout_sample.xml  fragment_view_of_drop_down_menu_layout_sample.xml  fragment_view_of_elastic_drag_dismiss_frame_layout_sample.xml  fragment_view_of_elastic_drag_dismiss_sample.xml  fragment_view_of_elastic_drag_layout_sample.xml  fragment_view_of_elastic_drag_menu_layout_sample.xml  list_placeholder.xml  menu_grid_item.xml  sample_card_menu_item.xml  squared_menu_item.xml  toolbar_arrow_left_right.xml  view_avatar_item.xml  view_my_question_item.xml  (+1 more)
app/src/main/res/menu/: drawer_sample_menu.xml  menu_drawer_sample.xml  menu_start.xml  start_menu.xml  start_page_menu.xml
app/src/main/res/raw/: sticker_bundle_config_v1.json
app/src/main/res/transition/: slide_down_exit.xml  slide_up_enter.xml
app/src/main/res/transition-v21/: slide_down_exit.xml  slide_up_enter.xml
app/src/main/res/values/: attrs.xml  colors.xml  com_crashlytics_export_strings.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/xml/: paths.xml
app/src/release/res/values/: google_maps_api.xml
demo-big-bite/: build.gradle
demo-big-bite/src/main/: AndroidManifest.xml
demo-big-bite/src/main/assets/: challenge_items.json
demo-big-bite/src/main/assets/animation/: count_down_321.json  food_scrap_particle.json
demo-big-bite/src/main/res/drawable/: sel_btn_settings.xml  sel_btn_start.xml
demo-big-bite/src/main/res/layout/: activity_game.xml  activity_sample_of_faces_and_landmarks_1.xml  activity_start.xml  (+1 more)
demo-dlib/: build.gradle
demo-dlib/src/main/: AndroidManifest.xml
demo-doodle/: build.gradle
demo-doodle/src/main/: AndroidManifest.xml
demo-news-feed/: build.gradle
demo-news-feed/src/main/: AndroidManifest.xml
demo-widget/: build.gradle
demo-widget/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lib-common-theme/: build.gradle
lib-common-theme/src/main/: AndroidManifest.xml
lib-component/: build.gradle  proguard-rules.pro
lib-component/src/main/: AndroidManifest.xml
lib-core/: build.gradle  proguard-rules.pro
lib-core/src/main/: AndroidManifest.xml
lib-core/src/main/cpp/: CMakeLists.txt
lib-dlib/: build.gradle
lib-dlib/src/main/cpp/: CMakeLists.txt  dlib-jni.cpp  hello-libs.cpp
lib-dlib/src/main/cpp/data/: messages.pb.cc  messages.pb.h
lib-dlib/src/main/cpp/include/my/dlib/data/: messages.pb.cc  messages.pb.h
lib-dlib/src/main/cpp/util/: profiler.cpp  profiler.h
lib-dlib/src/main/proto/: compile.sh  messages.proto
lib-ml/: build.gradle  proguard-rules.pro
lib-ml/src/main/: AndroidManifest.xml
lib-ml/src/main/cpp/: CMakeLists.txt  rgb2yuv.cc
lib-ml/src/main/jni/: imageutils_jni.cc  org_dmlc_mxnet_Predictor.h  tensorflow_inference_jni.h
lib-photo-collage/: build.gradle  proguard-rules.pro
lib-photo-collage/src/main/: AndroidManifest.xml
lib-photo-collage/src/main/jni/: grids_generator_jni.cpp
lib-protobuf/: README.md  build.gradle  proguard-rules.pro
lib-protobuf/src/main/: AndroidManifest.xml
lib-protobuf/src/main/cpp/: CMakeLists.txt  protobuf_util.cpp
lib-reactive/: build.gradle
lib-reactive/src/main/: AndroidManifest.xml
lib-tensorflow/: README.md  build.gradle
lib-tensorflow/src/main/cpp/: CMakeLists.txt  imageutils_jni.cc  tensorflow_inference_jni.cc  yuv2rgb.cc
lib-widget/: build.gradle  proguard-rules.pro
lib-widget/src/main/: AndroidManifest.xml
(+520 files in other folders)
